# cristata-app

./: .eslintrc.json  .gitignore  .gitpod.yml  .npmrc  .prettierrc  codegen.yaml  config-overrides.js  index.html  package-lock.json  package.json  postbuild.js  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yaml
patches/: @uwu+monaco-svelte+1.1.0.patch  array-differences+1.3.0.patch  dom-to-svg+0.12.2.patch  fluent-svelte+1.6.0.patch  react-router-prompt+0.2.1.patch  svelte-preprocess-react+0.14.0.patch  svelte-tiptap+0.7.0.patch  yjs+13.5.24.patch
public/: index.html  manifest.json  popup.html  service-worker.js
public/scripts/: nodegarden.js
src/: .prettierrc  App.css  App.tsx  Protected.tsx  ReloadPrompt.tsx  app.html  config.ts  config.tsx  emotion.d.ts  global.d.ts  hooks.client.ts  hooks.server.ts  index.tsx  init.ts  localhost-key.pem  localhost.pem  service-worker.ts  serviceWorker.ts  serviceWorkerRegistration.ts  setupProxy.js  svelte.config.js  typings.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/config/: collections.ts  config.tsx  index.ts
src/graphql/: ActivitiesList.gql  BasicProfileMe.gql  BillingStatus.gql  ClientConsumer.tsx  CollectionConfig.gql  CreateExternalAccount.gql  CreateFile.gql  CreatePhoto.gql  CreateTeam.gql  CreateToken.gql  CreateUser.gql  CreateWebhook.gql  DashboardConfig.gql  DeleteExternalAccount.gql  DeleteTeam.gql  DeleteWebhook.gql  Event.gql  EventsList.gql  ExternalAccountsAppSettings.gql  (+34 more)
static/: popup.html
(+681 files in other folders)
