[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["devtools", "window-close", "window-create", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
window-vibrancy = "0.3.2"
winreg = "0.11.0"
raw-window-handle = "0.5.0"
window-shadows = "0.2.1"

[target."cfg(target_os = \"windows\")".dependencies]
windows = { version = "0.44.0", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_UI_Controls",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "UI_ViewManagement"
] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
